další zjednodušení CSS a opravy s tím související

--- a/collecting/index.html
+++ b/collecting/index.html
@@ -26,9 +26,9 @@
                 </nav>
             </div>
         </header>
-        <div class="collecting-content-wrapper pad-20">
+        <div class="collecting-content-wrapper">
             <section class="intro pad-20 round-corners">
-                <div class="black-transparent-bg round-corners">
+                <div class="black-semitransparent-bg round-corners">
                     <h2 class="darkgray-underline">Want to start your collection?</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vel, recusandae ea dignissimos ipsum animi repudiandae accusantium consequatur labore. Aut perferendis rem hic! Commodi tenetur odio porro! Ut magnam architecto at aperiam vel consequuntur iste. In animi, veritatis expedita, quia non ad ipsum fugiat soluta excepturi cumque qui id voluptate facilis possimus dolor nostrum optio omnis itaque repudiandae perferendis doloribus enim eaque nam molestias! Sit in voluptatibus deserunt non dicta.
@@ -61,7 +61,7 @@
             </section>
             <section class="portfolio52-section pad-20 round-corners">
                 <article>
-                    <div class="black-transparent-bg round-corners">
+                    <div class="black-semitransparent-bg round-corners">
                         <h2 class="darkgray-underline">Keep track of your collection with Portfolio52!</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
