--- a/designers/index.html
+++ b/designers/index.html
@@ -27,7 +27,7 @@
             </div>
         </header>
         <div class="designers-content-wrapper">
-            <section class="designer-container">
+            <section class="designer-container black-semitransparent-bg round-corners">
                 <img class="designer-profile-img" src="../assets/img/lukewadey.jpg" alt="profile image of designer Luke Wadey">
                 <div class="description">
                     <h2 class="darkgray-underline">Luke Wadey</h2>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </section>
-            <section class="designer-container">
+            <section class="designer-container black-semitransparent-bg round-corners">
                 <img class="designer-profile-img" src="../assets/img/stockholm17.jpg" alt="profile image of designer Stockholm17 (Lorenzo Gaggiotti)">
                 <div class="description">
                     <h2 class="darkgray-underline">Stockholm17</h2>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </section>
-            <section class="designer-container">
+            <section class="designer-container black-semitransparent-bg round-corners">
                 <img class="designer-profile-img" src="../assets/img/nathanandleo.jpg" alt="profile image of designers known as Missing New York (Nathan & Leo)">
                 <div class="description">
                     <h2 class="darkgray-underline">Missing New York</h2>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </section>
-            <section class="designer-container">
+            <section class="designer-container black-semitransparent-bg round-corners">
                 <img class="designer-profile-img" src="../assets/img/jamesmilaras.webp" alt="profile image of designer Joker & the Thief (James Milaras)">
                 <div class="description">
                     <h2 class="darkgray-underline">Joker &#38; the Thief</h2>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </section>
-            <section class="designer-container">
+            <section class="designer-container black-semitransparent-bg round-corners">
                 <img class="designer-profile-img" src="../assets/img/danielschneider.jpg" alt="profile image of designer Stockholm17 (Lorenzo Gaggiotti)">
                 <div class="description">
                     <h2 class="darkgray-underline">Daniel Schneider</h2>
