--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@
             </div>
         </header>
         <section class="welcome-section">
-            <p>Welcome to this page. I will try to explain as much as I can about poker cards, collecting and the community around it, introduce some of the designers that create them as well as manufacturers that print them. I will not forget to mention how a single deck of poker cards can be used in various ways, so keep on exploring...</p>
+            <p class="round-corners black-semitransparent-bg">Welcome to this page. I will try to explain as much as I can about poker cards, collecting and the community around it, introduce some of the designers that create them as well as manufacturers that print them. I will not forget to mention how a single deck of poker cards can be used in various ways, so keep on exploring...</p>
         </section>
         <div class="banners-wrapper">
-            <section class="banner collecting">
-                <div>
+            <section class="banner collecting round-corners">
+                <div class="black-semitransparent-bg round-corners">
                     <h2 class="darkgray-underline">Collecting</h2>
                     <p>Information about playing card collecting. Where to buy cards, where to trade them, how to keep track of your collection and where can you find community of collectors and enthusiasts. Beware! Like in all genres of collecting anything, you may end up chasing that white whale forever...</p>
                 </div>
                 <a class="btn btn-centered" href="./collecting/">ENTER <span>&#8594;</span></a>
             </section>
-            <section class="banner designers">
-                <div>
+            <section class="banner designers round-corners">
+                <div class="black-semitransparent-bg round-corners">
                     <h2 class="darkgray-underline">Designers</h2>
                     <p>There are many people and studios working on custom designs for playing cards. Here are some of the designers summarized in short profiles with examples of their work.</p>
                 </div>
                 <a class="btn btn-centered" href="./designers/">ENTER <span>&#8594;</span></a>
             </section>
-            <section class="banner manufacturers">
-                <div>
+            <section class="banner manufacturers round-corners">
+                <div class="black-semitransparent-bg round-corners">
                     <h2 class="darkgray-underline">Manufacturers</h2>
                     <p>Two major manufacturers print thousands of decks a day, however, there are several others that are interesting and producing good quality cards. Fancy a single deck with your own custom design? Options to do that are there!</p>
                 </div>
                 <a class="btn btn-centered" href="./manufacturers/">ENTER <span>&#8594;</span></a>
             </section>
-            <section class="banner uses">
-                <div>
+            <section class="banner uses round-corners">
+                <div class="black-semitransparent-bg round-corners">
                     <h2 class="darkgray-underline">Uses</h2>
                     <p>Many ways to use poker sized playing cards exist for all kinds of skill levels. Don't worry, you can learn anything with enough determination and time put into it! Want to try cardistry? Play a card game? Start performing magic tricks? Learn more in this section.</p>
                 </div>
