úprava stylu Designers stránky

--- a/collecting/index.html
+++ b/collecting/index.html
@@ -29,7 +29,7 @@
         <div class="collecting-content-wrapper">
             <section class="intro pad-20 round-corners">
                 <div class="black-semitransparent-bg round-corners">
-                    <h2 class="darkgray-underline">Want to start your collection?</h2>
+                    <h2 class="article-heading">Want to start your collection?</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vel, recusandae ea dignissimos ipsum animi repudiandae accusantium consequatur labore. Aut perferendis rem hic! Commodi tenetur odio porro! Ut magnam architecto at aperiam vel consequuntur iste. In animi, veritatis expedita, quia non ad ipsum fugiat soluta excepturi cumque qui id voluptate facilis possimus dolor nostrum optio omnis itaque repudiandae perferendis doloribus enim eaque nam molestias! Sit in voluptatibus deserunt non dicta.
                     </p>
@@ -38,7 +38,7 @@
             <section class="community-section">
                 <article class="black-semitransparent-bg pad-20 round-corners">
                     <div class="article-content">
-                        <h2>Instagram community</h2>
+                        <h2 class="article-heading">Instagram community</h2>
                         <div class="logo-crop">
                             <img class="logo" src="../assets/img/ig_logo.png" alt="Instagram logo">
                         </div>
@@ -48,7 +48,7 @@
                 </article>
                 <article class="black-semitransparent-bg pad-20 round-corners">
                     <div class="article-content">
-                        <h2>United Cardists forum</h2>
+                        <h2 class="article-heading">United Cardists forum</h2>
                         <div class="logo-crop">
                             <img class="logo" src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.18169-9/10441243_1524966054390342_8710750428767427879_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=86_Q4_PYgSEAX8YQ6yN&_nc_ht=scontent-prg1-1.xx&oh=00_AfBNeCbwQo7hiUnkWJ-HzV3kDV-efbfRErjlDS6vk3DgvA&oe=638DA91C" alt="United Cardists Forum logo">
                         </div>
@@ -62,7 +62,7 @@
             <section class="portfolio52-section pad-20 round-corners">
                 <article>
                     <div class="black-semitransparent-bg round-corners">
-                        <h2 class="darkgray-underline">Keep track of your collection with Portfolio52!</h2>
+                        <h2 class="article-heading">Keep track of your collection with Portfolio52!</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, officiis ut quibusdam doloribus vel adipisci, autem error perferendis in atque voluptate, dolor ab eum beatae provident. Adipisci reprehenderit blanditiis amet sapiente maxime, et quidem. Numquam nisi labore quaerat dolorum voluptatum exercitationem illo. Expedita molestiae asperiores delectus vero nulla quae velit!
                         </p>
