--- a/designers/index.html
+++ b/designers/index.html
@@ -50,11 +50,11 @@
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/avh_cards.jpg" alt="AvH poker card design by Luke Wadey">
-                    <img src="../assets/img/monoxchroma_cards.jpg" alt="Mono-X Chroma Edition poker card design by Luke Wadey">
-                    <img src="../assets/img/monoxerochroma_cards.jpg" alt="Mono-Xero Chroma Edition poker card design by Luke Wadey">
+                    <img src="../assets/img/avh-cards.png" alt="AvH poker card design by Luke Wadey">
+                    <img src="../assets/img/monoxchroma-cards.png" alt="Mono-X Chroma Edition poker card design by Luke Wadey">
+                    <img src="../assets/img/monoxerochroma-cards.png" alt="Mono-Xero Chroma Edition poker card design by Luke Wadey">
                     <img src="../assets/img/arwv1-cards.png" alt="ARW V1 poker card design by Luke Wadey">
-                    <img src="../assets/img/arwv2_cards.jpg" alt="ARW V2 poker card design by Luke Wadey">
+                    <img src="../assets/img/arwv2-cards.png" alt="ARW V2 poker card design by Luke Wadey">
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
@@ -80,11 +80,11 @@
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/blackrequiem_cards.jpg" alt="Black Requiem poker card design by Stockholm17">
-                    <img src="../assets/img/ravniiii_cards.jpg" alt="Ravn IIII poker card design by Stockholm17">
-                    <img src="../assets/img/eyeoftheoceanlunae_cards.jpg" alt="Eye of the Ocean Lunae poker card design by Stockholm17">
-                    <img src="../assets/img/eyeoftheoceansolis_cards.jpg" alt="Eye of the Ocean Solis poker card design by Stockholm17">
-                    <img src="../assets/img/notoriousgamblingfrog_cards.jpg" alt="Notorious Gambling Frog poker card design by Stockholm17">
+                    <img src="../assets/img/blackrequiem-cards.png" alt="Black Requiem poker card design by Stockholm17">
+                    <img src="../assets/img/ravniiii-cards.png" alt="Ravn IIII poker card design by Stockholm17">
+                    <img src="../assets/img/eyeoftheoceanlunae-cards.png" alt="Eye of the Ocean Lunae poker card design by Stockholm17">
+                    <img src="../assets/img/eyeoftheoceansolis-cards.png" alt="Eye of the Ocean Solis poker card design by Stockholm17">
+                    <img src="../assets/img/notoriousgamblingfrog-cards.png" alt="Notorious Gambling Frog poker card design by Stockholm17">
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
@@ -138,11 +138,11 @@
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/jokerandthethief_cards.jpg" alt="Original Joker and the Thief poker card design by Joker and the Thief">
-                    <img src="../assets/img/happysad_cards.jpg" alt="Happy Sad poker card design by Joker and the Thief">
-                    <img src="../assets/img/victory_cards.jpg" alt="Victory poker card design by Joker and the Thief">
-                    <img src="../assets/img/seafarers_cards.jpg" alt="Seafarers V2 poker card design by Joker and the Thief">
-                    <img src="../assets/img/fiveninetyseven_cards.jpg" alt="597 poker card design by Joker and the Thief">
+                    <img src="../assets/img/jokerandthethief-cards.png" alt="Original Joker and the Thief poker card design by Joker and the Thief">
+                    <img src="../assets/img/happysad-cards.png" alt="Happy Sad poker card design by Joker and the Thief">
+                    <img src="../assets/img/victory-cards.png" alt="Victory poker card design by Joker and the Thief">
+                    <img src="../assets/img/seafarers-cards.png" alt="Seafarers V2 poker card design by Joker and the Thief">
+                    <img src="../assets/img/fiveninetyseven-cards.png" alt="597 poker card design by Joker and the Thief">
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
@@ -168,11 +168,11 @@
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/dondorf_cards.jpg" alt="Dondorf poker card design by Daniel Schneider">
-                    <img src="../assets/img/blackroses_cards.jpg" alt="Black Roses poker card design by Daniel Schneider">
-                    <img src="../assets/img/remedies_cards.jpg" alt="Remedies poker card design by Daniel Schneider">
-                    <img src="../assets/img/orbitv8_cards.jpg" alt="Orbit V8 poker card design by Daniel Schneider">
-                    <img src="../assets/img/innocence_cards.jpg" alt="Innocence poker card design by Daniel Schneider">
+                    <img src="../assets/img/dondorf-cards.png" alt="Dondorf poker card design by Daniel Schneider">
+                    <img src="../assets/img/blackroses-cards.png" alt="Black Roses poker card design by Daniel Schneider">
+                    <img src="../assets/img/remedies-cards.png" alt="Remedies poker card design by Daniel Schneider">
+                    <img src="../assets/img/orbitv8-cards.png" alt="Orbit V8 poker card design by Daniel Schneider">
+                    <img src="../assets/img/innocence-cards.png" alt="Innocence poker card design by Daniel Schneider">
                 </div>
             </section>
         </div>
