--- a/collecting/index.html
+++ b/collecting/index.html
@@ -34,30 +34,30 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus vel, recusandae ea dignissimos ipsum animi repudiandae accusantium consequatur labore. Aut perferendis rem hic! Commodi tenetur odio porro! Ut magnam architecto at aperiam vel consequuntur iste. In animi, veritatis expedita, quia non ad ipsum fugiat soluta excepturi cumque qui id voluptate facilis possimus dolor nostrum optio omnis itaque repudiandae perferendis doloribus enim eaque nam molestias! Sit in voluptatibus deserunt non dicta.
                     </p>
                 </div>
-            </section>
-            <section class="community-section">
-                <article class="black-semitransparent-bg pad-20 round-corners">
-                    <div class="article-content">
-                        <h2 class="article-heading">Instagram community</h2>
-                        <div class="logo-crop">
-                            <img class="logo" src="../assets/img/ig_logo.png" alt="Instagram logo">
+                <div class="community-section">
+                    <article class="black-semitransparent-bg round-corners">
+                        <div class="article-content">
+                            <h2 class="article-heading">Instagram community</h2>
+                            <div class="logo-crop">
+                                <img class="logo" src="../assets/img/ig_logo.png" alt="Instagram logo">
+                            </div>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus, natus laudantium at cum maxime odit quidem unde, veniam molestias tenetur labore architecto alias maiores aliquid molestiae eaque porro praesentium dolore asperiores cumque nostrum? Exercitationem eius explicabo est vitae natus eveniet. Ad culpa labore eaque soluta sapiente eligendi cum dignissimos.</p>
                         </div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus, natus laudantium at cum maxime odit quidem unde, veniam molestias tenetur labore architecto alias maiores aliquid molestiae eaque porro praesentium dolore asperiores cumque nostrum? Exercitationem eius explicabo est vitae natus eveniet. Ad culpa labore eaque soluta sapiente eligendi cum dignissimos.</p>
-                    </div>
-                    <a class="btn btn-centered" ref="https://www.instagram.com/explore/tags/playingcards/">Explore #playingcards &#8594;</a>
-                </article>
-                <article class="black-semitransparent-bg pad-20 round-corners">
-                    <div class="article-content">
-                        <h2 class="article-heading">United Cardists forum</h2>
-                        <div class="logo-crop">
-                            <img class="logo" src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.18169-9/10441243_1524966054390342_8710750428767427879_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=86_Q4_PYgSEAX8YQ6yN&_nc_ht=scontent-prg1-1.xx&oh=00_AfBNeCbwQo7hiUnkWJ-HzV3kDV-efbfRErjlDS6vk3DgvA&oe=638DA91C" alt="United Cardists Forum logo">
+                        <a class="btn btn-centered" ref="https://www.instagram.com/explore/tags/playingcards/">Explore #playingcards &#8594;</a>
+                    </article>
+                    <article class="black-semitransparent-bg round-corners">
+                        <div class="article-content">
+                            <h2 class="article-heading">United Cardists forum</h2>
+                            <div class="logo-crop">
+                                <img class="logo" src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.18169-9/10441243_1524966054390342_8710750428767427879_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=86_Q4_PYgSEAX8YQ6yN&_nc_ht=scontent-prg1-1.xx&oh=00_AfBNeCbwQo7hiUnkWJ-HzV3kDV-efbfRErjlDS6vk3DgvA&oe=638DA91C" alt="United Cardists Forum logo">
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corrupti consequuntur ullam, dolorum minima sint alias voluptatem aliquid obcaecati doloribus amet totam vitae tempore unde a facere dignissimos corporis voluptatibus, deleniti cumque laudantium. Repudiandae, totam, possimus provident ratione consectetur asperiores, quidem exercitationem dignissimos error laboriosam assumenda eius quas voluptas itaque. Fugiat nulla quisquam debitis commodi temporibus inventore nesciunt quod unde reiciendis obcaecati delectus, fugit repellendus voluptas at beatae quas placeat facere tempore ducimus, autem adipisci numquam illum, magni incidunt. Odit.
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corrupti consequuntur ullam, dolorum minima sint alias voluptatem aliquid obcaecati doloribus amet totam vitae tempore unde a facere dignissimos corporis voluptatibus, deleniti cumque laudantium. Repudiandae, totam, possimus provident ratione consectetur asperiores, quidem exercitationem dignissimos error laboriosam assumenda eius quas voluptas itaque. Fugiat nulla quisquam debitis commodi temporibus inventore nesciunt quod unde reiciendis obcaecati delectus, fugit repellendus voluptas at beatae quas placeat facere tempore ducimus, autem adipisci numquam illum, magni incidunt. Odit.
-                        </p>
-                    </div>
-                    <a class="btn btn-centered" ref="https://unitedcardists.com/">Visit the forum &#8594;</a>
-                </article>
+                        <a class="btn btn-centered mb-15" ref="https://unitedcardists.com/">Visit the forum &#8594;</a>
+                    </article>
+                </div>
             </section>
             <section class="portfolio52-section pad-20 round-corners">
                 <article>
