--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SP1 Manufacturers</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/manufacturers.css">
         <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
     </head>
     <body>
@@ -25,11 +26,36 @@
                 </nav>
             </div>
         </header>
-        <section>
-
-        </section>
+        <div class="page-content-wrapper">
+            <section>
+                <h2 class="article-heading">Are you interested in who prints poker cards?</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non amet voluptatibus id modi eos sint error, aliquam numquam illo facere deserunt sed et nisi sunt assumenda asperiores quae ducimus animi neque earum odio. Odio aperiam, doloribus quos quo, natus repudiandae sint veniam, ea maiores autem doloremque magnam architecto non corporis!
+                </p>
+            </section>
+            <section>
+                <article>
+                    <h2 class="article-heading">United States Playing Card Company</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
+                    </p>
+                </article>
+                <article>
+                    <h2 class="article-heading">Cartamundi</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
+                    </p>
+                </article>
+                <article>
+                    <h2 class="article-heading">Make Playing Cards</h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
+                    </p>
+                </article>
+            </section>
+        </div>
         <footer>
-
+            <p>Copyright &#169; 2022 Dominik Fuka</p>
         </footer>
     </body>
 </html>
