doplnění dalších stylů stránky Manufacturers

--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -27,26 +27,28 @@
             </div>
         </header>
         <div class="page-content-wrapper">
-            <section>
-                <h2 class="article-heading">Are you interested in who prints poker cards?</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non amet voluptatibus id modi eos sint error, aliquam numquam illo facere deserunt sed et nisi sunt assumenda asperiores quae ducimus animi neque earum odio. Odio aperiam, doloribus quos quo, natus repudiandae sint veniam, ea maiores autem doloremque magnam architecto non corporis!
-                </p>
+            <section class="intro-section">
+                <article class="black-semitransparent-bg round-corners">
+                    <h2 class="article-heading">Who prints poker cards?</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non amet voluptatibus id modi eos sint error, aliquam numquam illo facere deserunt sed et nisi sunt assumenda asperiores quae ducimus animi neque earum odio. Odio aperiam, doloribus quos quo, natus repudiandae sint veniam, ea maiores autem doloremque magnam architecto non corporis!
+                    </p>
+                </article>
             </section>
-            <section>
-                <article>
+            <section class="manufacturers-section">
+                <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">United States Playing Card Company</h2>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
                     </p>
                 </article>
-                <article>
+                <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Cartamundi</h2>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
                     </p>
                 </article>
-                <article>
+                <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Make Playing Cards</h2>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
