přidání obrázků výrobců a jejich stylizace

--- a/manufacturers/index.html
+++ b/manufacturers/index.html
@@ -38,18 +38,27 @@
             <section class="manufacturers-section">
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">United States Playing Card Company</h2>
+                    <figure>
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b2/TheUnitedStatesPlayingCardCompanyLogo.svg/1024px-TheUnitedStatesPlayingCardCompanyLogo.svg.png" alt="logo of United States Playing Card Company">
+                    </figure>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
                     </p>
                 </article>
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Cartamundi</h2>
+                    <figure>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Cartamundi_logo_wslogan.png" alt="logo of Cartamundi">
+                    </figure>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
                     </p>
                 </article>
                 <article class="black-semitransparent-bg round-corners">
                     <h2 class="article-heading">Make Playing Cards</h2>
+                    <figure>
+                        <img src="https://cdn.shopify.com/s/files/1/1788/4029/articles/MPC_logo_1024x1024.png?v=1571681131" alt="logo of Make Playing Cards">
+                    </figure>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex ducimus architecto sequi dolorum vitae voluptas, facere aut, adipisci, asperiores corrupti laborum mollitia eius exercitationem. Provident maxime tempore sequi eligendi soluta dolor hic porro quo ex laborum vitae reprehenderit animi omnis itaque minima, amet magni quod accusantium illo? Maxime, distinctio minus?
                     </p>
