--- a/uses/index.html
+++ b/uses/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SP1 Uses</title>
         <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/uses.css">
         <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
     </head>
     <body>
@@ -32,7 +33,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit quasi modi explicabo ipsam, iusto autem beatae inventore quae dignissimos praesentium saepe porro a! Minima molestias debitis consequuntur amet ex.
                 </p>
                 <h3>Rules explained</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/CpSewSHZhmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="round-corners" width="560" height="315" src="https://www.youtube-nocookie.com/embed/CpSewSHZhmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Cardistry</h2>
@@ -40,7 +41,7 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt consequatur veniam nulla, quas ducimus hic, vero fugit neque porro natus laborum perspiciatis. Architecto eius repudiandae facilis, quasi aspernatur veritatis earum reiciendis alias iste maiores, ea sapiente tempora quae quod pariatur? Itaque, delectus laborum. Ullam adipisci rerum dolore numquam repellendus aspernatur.
                 </p>
                 <h3>Performance</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/S7kG641iA_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="round-corners" width="560" height="315" src="https://www.youtube-nocookie.com/embed/S7kG641iA_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
             <article class="black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Magic</h2>
@@ -48,7 +49,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo officiis laboriosam quaerat delectus aliquam excepturi nam ipsa voluptates in repellat assumenda odio ab distinctio, beatae dolores. Exercitationem sequi excepturi beatae error numquam blanditiis nemo magni, adipisci iure amet delectus explicabo molestias ea cupiditate nesciunt. Error maxime repellat tempora dicta aliquam?
                 </p>
                 <h3>Performance</h3>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pYw4ibT_xrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="round-corners" width="560" height="315" src="https://www.youtube-nocookie.com/embed/pYw4ibT_xrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
         </section>
         <footer>
