základní obsah a vzhled stránky About

--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SP1 About</title>
         <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/styles.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/about.css">
         <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
     </head>
     <body>
@@ -26,10 +27,25 @@
             </div>
         </header>
         <section>
-
+            <article class="black-semitransparent-bg round-corners">
+                <h2 class="article-heading">About me and why I created this page</h2>
+                <div class="article-content">
+                    <figure>
+                        <img class="round-corners" src="https://scontent-prg1-1.xx.fbcdn.net/v/t1.6435-9/53226290_2364037243621051_262017615218606080_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=grWz1WT5j94AX9jGu9W&_nc_ht=scontent-prg1-1.xx&oh=00_AfD8_KD2f2vj1OtcLYsYj00Ae1PBLuj_eTZDt0awCRSKHQ&oe=639AD997" alt="profile picture of the author (Dominik Fuka)">
+                    </figure>
+                    <div class="text-content">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae deserunt maiores dolorem delectus voluptates veritatis voluptas blanditiis et quidem, autem corporis odit molestiae minus quibusdam cum dignissimos praesentium id aut!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, quod odit, unde quaerat cumque minima maxime, ullam asperiores vero commodi fuga nihil praesentium voluptatem? Magni, fuga? Ducimus debitis magni ullam!
+                        </p>
+                    </div>
+                </div>
+            </article>
         </section>
         <footer>
-
+            <p>Copyright &#169; 2022 Dominik Fuka</p>
         </footer>
     </body>
 </html>
