oprava flex prvků a layoutu stránky Designers

--- a/designers/index.html
+++ b/designers/index.html
@@ -30,7 +30,9 @@
             <section class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Luke Wadey</h2>
                 <div class="designer-profile">
-                    <img src="../assets/img/lukewadey.jpg" alt="profile image of designer Luke Wadey">
+                    <figure>
+                        <img src="../assets/img/lukewadey.jpg" alt="profile image of designer Luke Wadey">
+                    </figure>
                     <div>
                         <h3>Basic info</h3>
                         <ul>
@@ -40,27 +42,33 @@
                         </ul>
                         <h3>Style</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
-                        <h3>Social media and other links</h3>
-                        <ul class="designer-links">
-                            <li><a class="btn" href="">Instagram</a></li>
-                            <li><a class="btn" href="">Personal page</a></li>
-                            <li><a class="btn" href="">Patreon</a></li>
-                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/avh-cards.png" alt="AvH poker card design by Luke Wadey">
-                    <img src="../assets/img/monoxchroma-cards.png" alt="Mono-X Chroma Edition poker card design by Luke Wadey">
-                    <img src="../assets/img/monoxerochroma-cards.png" alt="Mono-Xero Chroma Edition poker card design by Luke Wadey">
-                    <img src="../assets/img/arwv1-cards.png" alt="ARW V1 poker card design by Luke Wadey">
-                    <img src="../assets/img/arwv2-cards.png" alt="ARW V2 poker card design by Luke Wadey">
+                    <figure>
+                        <img src="../assets/img/avh-cards.png" alt="AvH poker card design by Luke Wadey">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/monoxchroma-cards.png" alt="Mono-X Chroma Edition poker card design by Luke Wadey">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/monoxerochroma-cards.png" alt="Mono-Xero Chroma Edition poker card design by Luke Wadey">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/arwv1-cards.png" alt="ARW V1 poker card design by Luke Wadey">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/arwv2-cards.png" alt="ARW V2 poker card design by Luke Wadey">
+                    </figure>
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Stockholm17</h2>
                 <div class="designer-profile">
-                    <img class="designer-profile-img" src="../assets/img/stockholm17.jpg" alt="profile image of designer Stockholm17 (Lorenzo Gaggiotti)">
+                    <figure>
+                        <img src="../assets/img/stockholm17.jpg" alt="profile image of designer Stockholm17 (Lorenzo Gaggiotti)">
+                    </figure>
                     <div>
                         <h3>Basic info</h3>
                         <ul>
@@ -70,27 +78,33 @@
                         </ul>
                         <h3>Style</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
-                        <h3>Social media and other links</h3>
-                        <ul class="designer-links">
-                            <li><a class="btn" href="">Instagram</a></li>
-                            <li><a class="btn" href="">Personal page</a></li>
-                            <li><a class="btn" href="">Patreon</a></li>
-                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/blackrequiem-cards.png" alt="Black Requiem poker card design by Stockholm17">
-                    <img src="../assets/img/ravniiii-cards.png" alt="Ravn IIII poker card design by Stockholm17">
-                    <img src="../assets/img/eyeoftheoceanlunae-cards.png" alt="Eye of the Ocean Lunae poker card design by Stockholm17">
-                    <img src="../assets/img/eyeoftheoceansolis-cards.png" alt="Eye of the Ocean Solis poker card design by Stockholm17">
-                    <img src="../assets/img/notoriousgamblingfrog-cards.png" alt="Notorious Gambling Frog poker card design by Stockholm17">
+                    <figure>
+                        <img src="../assets/img/blackrequiem-cards.png" alt="Black Requiem poker card design by Stockholm17">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/ravniiii-cards.png" alt="Ravn IIII poker card design by Stockholm17">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/eyeoftheoceanlunae-cards.png" alt="Eye of the Ocean Lunae poker card design by Stockholm17">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/eyeoftheoceansolis-cards.png" alt="Eye of the Ocean Solis poker card design by Stockholm17">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/notoriousgamblingfrog-cards.png" alt="Notorious Gambling Frog poker card design by Stockholm17">
+                    </figure>
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Missing New York</h2>
                 <div class="designer-profile">
-                    <img class="designer-profile-img" src="../assets/img/nathanandleo.jpg" alt="profile image of designers known as Missing New York (Nathan & Leo)">
+                    <figure>
+                        <img src="../assets/img/nathanandleo.jpg" alt="profile image of designers known as Missing New York (Nathan & Leo)">
+                    </figure>
                     <div>
                         <h3>Basic info</h3>
                         <ul>
@@ -100,26 +114,33 @@
                         </ul>
                         <h3>Style</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
-                        <h3>Social media and other links</h3>
-                        <ul class="designer-links">
-                            <li><a class="btn" href="">Instagram</a></li>
-                            <li><a class="btn" href="">Personal page</a></li>
-                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/collage-cards.png" alt="Collage poker card design by Missing New York">
-                    <img src="../assets/img/article-cards.png" alt="Article poker card design by Missing New York">
-                    <img src="../assets/img/gesture-cards.png" alt="Gesture poker card design by Missing New York">
-                    <img src="../assets/img/analog-cards.png" alt="Analog poker card design by Missing New York">
-                    <img src="../assets/img/pigment-cards.png" alt="Pigment poker card design by Missing New York">
+                    <figure>
+                        <img src="../assets/img/collage-cards.png" alt="Collage poker card design by Missing New York">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/article-cards.png" alt="Article poker card design by Missing New York">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/gesture-cards.png" alt="Gesture poker card design by Missing New York">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/analog-cards.png" alt="Analog poker card design by Missing New York">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/pigment-cards.png" alt="Pigment poker card design by Missing New York">
+                    </figure>
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Joker &#38; the Thief</h2>
                 <div class="designer-profile">
-                    <img class="designer-profile-img" src="../assets/img/jamesmilaras.webp" alt="profile image of designer Joker & the Thief (James Milaras)">
+                    <figure>
+                        <img src="../assets/img/jamesmilaras.webp" alt="profile image of designer Joker & the Thief (James Milaras)">
+                    </figure>
                     <div>
                         <h3>Basic info</h3>
                         <ul>
@@ -129,26 +150,33 @@
                         </ul>
                         <h3>Style</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
-                        <h3>Social media and other links</h3>
-                        <ul class="designer-links">
-                            <li><a class="btn" href="">Instagram</a></li>
-                            <li><a class="btn" href="">Personal page</a></li>
-                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/jokerandthethief-cards.png" alt="Original Joker and the Thief poker card design by Joker and the Thief">
-                    <img src="../assets/img/happysad-cards.png" alt="Happy Sad poker card design by Joker and the Thief">
-                    <img src="../assets/img/victory-cards.png" alt="Victory poker card design by Joker and the Thief">
-                    <img src="../assets/img/seafarers-cards.png" alt="Seafarers V2 poker card design by Joker and the Thief">
-                    <img src="../assets/img/fiveninetyseven-cards.png" alt="597 poker card design by Joker and the Thief">
+                    <figure>
+                        <img src="../assets/img/jokerandthethief-cards.png" alt="Original Joker and the Thief poker card design by Joker and the Thief">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/happysad-cards.png" alt="Happy Sad poker card design by Joker and the Thief">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/victory-cards.png" alt="Victory poker card design by Joker and the Thief">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/seafarers-cards.png" alt="Seafarers V2 poker card design by Joker and the Thief">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/fiveninetyseven-cards.png" alt="597 poker card design by Joker and the Thief">
+                    </figure>
                 </div>
             </section>
             <section class="designer-container black-semitransparent-bg round-corners">
                 <h2 class="article-heading">Daniel Schneider</h2>
                 <div class="designer-profile">
-                    <img class="designer-profile-img" src="../assets/img/danielschneider.jpg" alt="profile image of designer Daniel Schneider">
+                    <figure>
+                        <img src="../assets/img/danielschneider.jpg" alt="profile image of designer Daniel Schneider">
+                    </figure>
                     <div>
                         <h3>Basic info</h3>
                         <ul>
@@ -158,21 +186,25 @@
                         </ul>
                         <h3>Style</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio alias perferendis adipisci vitae. Repellat, accusantium? Magnam fuga assumenda, praesentium nam beatae aliquam, ex velit eligendi, harum est molestias alias error! Esse labore voluptatem quaerat eius. Distinctio ratione, reiciendis expedita eligendi esse aliquam debitis atque voluptas rem, nobis itaque odit excepturi a magni saepe sint iure qui error! Iure, tempora provident? Necessitatibus itaque incidunt maxime quam sapiente quo, excepturi hic, odit modi nostrum tempora debitis molestiae.</p>
-                        <h3>Social media and other links</h3>
-                        <ul class="designer-links">
-                            <li><a class="btn" href="">Instagram</a></li>
-                            <li><a class="btn" href="">Personal page</a></li>
-                            <li><a class="btn" href="">Patreon</a></li>
-                        </ul>
                     </div>
                 </div>
                 <h3>Designs</h3>
                 <div class="design-gallery">
-                    <img src="../assets/img/dondorf-cards.png" alt="Dondorf poker card design by Daniel Schneider">
-                    <img src="../assets/img/blackroses-cards.png" alt="Black Roses poker card design by Daniel Schneider">
-                    <img src="../assets/img/remedies-cards.png" alt="Remedies poker card design by Daniel Schneider">
-                    <img src="../assets/img/orbitv8-cards.png" alt="Orbit V8 poker card design by Daniel Schneider">
-                    <img src="../assets/img/innocence-cards.png" alt="Innocence poker card design by Daniel Schneider">
+                    <figure>
+                        <img src="../assets/img/dondorf-cards.png" alt="Dondorf poker card design by Daniel Schneider">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/blackroses-cards.png" alt="Black Roses poker card design by Daniel Schneider">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/remedies-cards.png" alt="Remedies poker card design by Daniel Schneider">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/orbitv8-cards.png" alt="Orbit V8 poker card design by Daniel Schneider">
+                    </figure>
+                    <figure>
+                        <img src="../assets/img/innocence-cards.png" alt="Innocence poker card design by Daniel Schneider">
+                    </figure>
                 </div>
             </section>
         </div>
